# expecs

./: CMakeLists.txt  LICENSE  README.md
include/expecs/: component_manager.h  component_pool.h  entity_manager.h  registry.h  system_manager.h
tests/: benchmarks.cpp  component_manager_tests.cpp  entity_manager_tests.cpp  mock_objects.h  registry_tests.cpp  system_manager_tests.cpp
